--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -5,11 +5,68 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^11.3.0"
+    "graceful-fs": "^4.1.3",
+    "is-promise": "^2.1.0",
+    "lodash": "4",
+    "pify": "^3.0.0",
+    "steno": "^0.4.1"
   },
-  "devDependencies": {},
+  "devDependencies": {    
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.1",
+    "delay": "^2.0.0",
+    "eslint": "^4.16.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.5.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^1.0.0-rc.3",
+    "jest": "^22.1.4",
+    "lodash-id": "^0.14.0",
+    "mv": "^2.1.1",
+    "pkg-ok": "^2.0.0",
+    "prettier": "^1.10.2",
+    "ramda": "^0.25.0",
+    "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.2",
+    "sinon": "^4.2.0",
+    "tempfile": "^2.0.0",
+    "webpack": "^3.10.0"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ignore-path .gitignore",
+    "fix": "npm run lint -- --fix",
+    "prepublishOnly": "npm run build && pkg-ok",
+    "build": "npm run build:lib && npm run build:dist",
+    "build:lib": "rimraf lib && babel src --out-dir lib && npm run mvAdapters",
+    "build:dist": "rimraf dist && webpack && webpack -p",
+    "mvAdapters": "rimraf adapters && mv lib/adapters ."
   },
   "author": "XeWuP",
   "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/typicode/lowdb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/typicode/lowdb/issues"
+  },
+  "homepage": "https://github.com/typicode/lowdb",
+
+  "engines": {
+    "node": ">=6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  }
+
 }
+
